--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
     margin: 0;
     padding: 0;
 }
-/*
-body:before {
+
+html:before {
     content: "";
     display: block;
     position: fixed;
@@ -27,15 +27,6 @@ body:before {
     height: 100%;
     z-index: -10;
     background: url("../images/background-image.jpg") no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-*/
-
-body { 
-    background: url("../images/background-image.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
