--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,8 @@
 }
 
 html { 
-    background: url("../images/background-image.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
+    background-color: rgb(45, 112, 49);
+}
 
 body:before {
     content: "";
@@ -39,11 +35,10 @@ body:before {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  }
+}
 
 :root{
     /* Homepage Booking Form */
-    
     --home-form-bg: transparent;
     --home-form-btn-bg: rgba(255,255,255,0.6);
     --home-form-text: #000;
@@ -268,7 +263,7 @@ nav ul li ul li a:hover{
     margin: 12px 0;
 }
 
-#overlay{
+#overlay, #map-overlay{
     display: none;
     position: fixed;
     top: 0;
@@ -276,7 +271,7 @@ nav ul li ul li a:hover{
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.3);
-    z-index: 12;
+    z-index: 13;
 }
 
 
@@ -470,20 +465,35 @@ footer a{
 .map-howTo{
     cursor: pointer;
     position: fixed;
+    top: 65px;
     left: 50%;
-    height: 20px;
     transform: translateX(-50%);
+    padding: 3px;
+    z-index: 16;
 }
 
-.background-image{
+#map-howTo-close{
+    display: none;
+}
+
+#map-explanation{
+    display: none;
     position: fixed;
-    overflow: hidden;
-    width: 100vw;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    left: 0;
-    z-index: 1;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 75vh;
+    width: 75vw;
+    z-index: 15;
+    padding: 1% 1%;
+    background-color: #fff;
+    overflow: scroll;
+}
+
+#map-explanation p{
+    line-height: 24px;
+    font-size: 18px;
+    margin: 0 0 16px 0;
 }
 
 
@@ -2950,11 +2960,6 @@ fieldset {
 
     footer a{
         padding: 0px 3px; 
-    }
-
-    /* Map How To Button */
-    .map-howTo{
-        top: -25px;
     }
 
 }
