--- a/css/style.css
+++ b/css/style.css
@@ -2034,6 +2034,11 @@ fieldset {
     text-decoration: none;
 }
 
+/* Reviews Page */
+.reviews-page{
+    padding: 20px 10px;
+}
+
 /* Smaller Screen Settings */
 @media only screen and (max-width: 1100px){
     .overview-container{
