--- a/css/style.css
+++ b/css/style.css
@@ -1608,20 +1608,6 @@ footer a{
     width: auto;
 }
 
-.reviews-container{
-    display: block;
-    float: left;
-    margin-left: 3vw;
-    text-align: center;
-}
-
-.reviews-container p{
-    padding: 0;
-    margin: 0;
-    text-align: center;
-    width: 100%;
-}
-
 .cabin-image-carousel-container{
     display: block;
     object-fit: contain;
@@ -1815,7 +1801,11 @@ footer a{
     font-weight: bold;
 }
 
-
+.cabin-reviews{
+    padding: 20px 10px;
+    max-height: 500px;
+    overflow: scroll;
+}
 
 /* CONTACT US PAGE */
 .contact-title{
