--- a/css/style.css
+++ b/css/style.css
@@ -1175,7 +1175,9 @@ footer a{
 
 .overview-image-carousel-img{
     width: 100%;
+    height: 100%;
     border-radius: 5px;
+    object-fit: cover;
 }
 
 .overview-prev, .overview-next{
