--- a/css/style.css
+++ b/css/style.css
@@ -1952,7 +1952,7 @@ footer a{
     }
     
     .overview-text-container h1{
-        font-family: var(--default-font-family);
+        font-family: var(--secondary-font-family);
         font-size: 24px; /**/
         padding: 0 0; /**/
         font-weight: bold;
@@ -1960,7 +1960,7 @@ footer a{
     }
     
     .overview-text-container h6{
-        font-family: var(--default-font-family);
+        font-family: var(--secondary-font-family);
         padding: 0 0; /**/
         font-size: 28px; /**/
         line-height: 36px; /**/
@@ -1984,6 +1984,7 @@ footer a{
     
     .scroll-down-icon{
         display: none; /**/
+        z-index: -1; /**/
     }
     
     .slideshow-container-right{
@@ -2008,42 +2009,6 @@ footer a{
         display: none; /**/ 
     }
     
-    .overview-overlay-container{
-        display: flex; /**/
-        flex-direction: column; /**/
-        position: absolute; /**/
-        top: 0%;
-        left: 0%;
-        width: 100%; /**/
-        height: 100%; /**/
-        cursor: pointer;
-        
-    }
-    
-    .overview-overlay{
-        float: left;
-        width: 100%; /**/
-        height: 200px; /**/
-        background: rgba(0,0,0,0.4);
-        z-index: 10;
-        padding-top: 50px; /**/
-    }
-    
-    .overview-overlay p{
-        position: static; /**/
-        line-height: 40px; /**/
-        font-family: var(--default-font-family);
-        color: #fff;
-        text-shadow: 2px 2px #000;
-        font-size: 32px; /**/
-        padding-left: 16px;
-    }
-    
-    .overview-overlay-underline{
-        border-bottom: 2px solid var(--accent-color);
-        margin: 10px 80% 0 16px; /**/
-    }
-
     .cabin-overview-extra-details{
         font-size: 13px !important;
     }
@@ -2591,6 +2556,7 @@ footer a{
     }
     
     .step-four-middle h1{
+        font-family: var(--secondary-font-family);
         padding: 16px 0px 8px 0px;
     }
     
